--- a/main/sass/_calendarSection.sass
+++ b/main/sass/_calendarSection.sass
@@ -104,6 +104,10 @@
                         font-size: 2rem
                 div.fc-toolbar-chunk:last-child
                     display: none
+
+    div.fc-daygrid-bg-harness
+        z-index: -1
+        
 @media (min-width: 500px)
     td
     div.fc-daygrid-day-frame
